--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="csanchezarisa portfolio app" />
+    <meta name="description" content="hung nguyen portfolio app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>CSANCHEZARISA | Software Engineer</title>
+    <title>Hung Nguyen | Web Developer</title>
   </head>
   <body>
     <noscript>
